[package]
name = "structionsite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.2.1"
flate2 = "1.0"
futures = "0.3.17"
hyper = { version = "0.14.14", features = ["full"] }
hyper-tls = "0.5.0"
podio = "0.2"
serde = { version = "1.0.130", features = ["default", "derive"] }
serde_json = "1.0"
tokio = { version = "1.13", features = ["full"] }

