[package]
name = "zip-service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-log = "2.0.0"
crc32fast = "1.2.1"
flate2 = "1.0"
futures = "0.3.17"
hyper = { version = "0.14.14", features = ["full"] }
hyper-tls = "0.5.0"
log = "0.4.14"
podio = "0.2"
simple_logger = "1.13.0"
serde = { version = "1.0.130", features = ["default", "derive"] }
serde_json = "1.0"
tokio = { version = "1.13", features = ["full"] }
